# eft-monitor

./: .gitignore  README.md  docker-compose.yaml  pylint.rc  pyproject.toml
etc/cicd/: Dockerfile
etf-monitor/: justetf.py  server.py  test-connectivity.py
etf_monitor/: justetf.py  server.py  test-connectivity.py
